started adding team

--- a/css/style.css
+++ b/css/style.css
@@ -567,14 +567,14 @@ body {
 .itemTeam {
   height: 321px;
   width: 270px;
-  background-image: url('../assets/team/team1.jpg');
+  background-image: url('../assets/team/matt.jpg');
   background-position: center;
   background-size: cover;
 }
 .itemTeam2 {
   height: 321px;
   width: 270px;
-  background-image: url('../assets/team/team2.jpg');
+  background-image: url('../assets/team/rocketkar.jpg');
   background-position: center;
   background-size: cover;
 }
@@ -1939,14 +1939,14 @@ footer ul li a:hover {
   .itemTeam {
     height: 321px;
     width: 100%;
-    background-image: url('../assets/team/team1.jpg');
+    background-image: url('../assets/team/matt.jpg');
     background-position: center;
     background-size: cover;
   }
   .itemTeam2 {
     height: 321px;
     width: 100%;
-    background-image: url('../assets/team/team2.jpg');
+    background-image: url('../assets/team/rocketkar.jpg');
     background-position: center;
     background-size: cover;
   }
@@ -2206,14 +2206,14 @@ footer ul li a:hover {
   .itemTeam {
     height: 321px;
     width: 100%;
-    background-image: url('../assets/team/team1.jpg');
+    background-image: url('../assets/team/matt.jpg');
     background-position: center;
     background-size: cover;
   }
   .itemTeam2 {
     height: 321px;
     width: 100%;
-    background-image: url('../assets/team/team2.jpg');
+    background-image: url('../assets/team/rocketkar.jpg');
     background-position: center;
     background-size: cover;
   }
@@ -2496,14 +2496,14 @@ footer ul li a:hover {
   .itemTeam {
     height: 321px;
     width: 100%;
-    background-image: url('../assets/team/team1.jpg');
+    background-image: url('../assets/team/matt.jpg');
     background-position: center;
     background-size: cover;
   }
   .itemTeam2 {
     height: 321px;
     width: 100%;
-    background-image: url('../assets/team/team2.jpg');
+    background-image: url('../assets/team/rocketkar.jpg');
     background-position: center;
     background-size: cover;
   }
@@ -2802,14 +2802,14 @@ footer ul li a:hover {
   .itemTeam {
     height: 321px;
     width: 100%;
-    background-image: url('../assets/team/team1.jpg');
+    background-image: url('../assets/team/matt.jpg');
     background-position: center;
     background-size: cover;
   }
   .itemTeam2 {
     height: 321px;
     width: 100%;
-    background-image: url('../assets/team/team2.jpg');
+    background-image: url('../assets/team/rocketkar.jpg');
     background-position: center;
     background-size: cover;
   }
